Add spec override for SerializedThrowable